--- a/Views/ApodPage.xaml
+++ b/Views/ApodPage.xaml
@@ -3,12 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SpaceScience.Views.ApodPage"
              NavigationPage.HasNavigationBar="True"
-             Title="ApodPage">
-    <Grid Margin="0"
-          Padding="0"
-          RowDefinitions="50,*">
+             Title="Apod">
 
-        <!--temp header-->
+    <!--<NavigationPage.TitleView>
         <Grid Margin="0"
                 Grid.Row="0"  
                 Padding="0"
@@ -29,27 +26,54 @@
                         HorizontalTextAlignment="Center"
                         VerticalTextAlignment="Center"/>
         </Grid>
+    </NavigationPage.TitleView>-->
+    <Grid Margin="0"
+          Padding="0"
+          RowDefinitions="50,*">
+
+        <!--temp header-->
+        <Grid Margin="0"
+                Grid.Row="0"  
+                Padding="0"
+                ColumnSpacing="0"
+                HeightRequest="50"
+                ColumnDefinitions="50,*,50">
+            <ImageButton 
+                        Grid.Column="0"
+                        Source="{StaticResource backButton}"
+                        HeightRequest="25"
+                        Command="{Binding GoBack}"/>
+
+            <Label 
+                        Grid.Column="1"
+                        Text="{Binding Title}"
+                        FontSize="18"
+                        FontAttributes="Bold"
+                        HorizontalTextAlignment="Center"
+                        VerticalTextAlignment="Center"/>
+        </Grid>
 
         <!-- APOD container-->
         <ScrollView Grid.Row="1"
-                    Margin="15,5"
-                    IsVisible="{Binding IsApod}">
-            <VerticalStackLayout>
+                    Margin="15,5">
+            <StackLayout Spacing="5">
 
                 <Label 
-                        Text="{Binding Apod.Explanation}"
-                        FontSize="Body"/>
-
+                    Text="{Binding Apod.Explanation}"
+                    MaxLines="5"/>
 
                 <Label 
-                        Text="{Binding Apod.Title}"
-                        FontSize="Body"
-                        FontAttributes="Bold"/>
+                        Text="{Binding Apod.Title}"/>
 
-                <Image 
-                        Source="{Binding Apod.Url}"/>
+                <Image
+                    HorizontalOptions="FillAndExpand"
+                    VerticalOptions="FillAndExpand">
+                    <Image.Source>
+                        <UriImageSource Uri="{Binding Apod.Url}"/>
+                    </Image.Source>
+                </Image>
 
-            </VerticalStackLayout>
+            </StackLayout>
         </ScrollView>
 
         <ActivityIndicator 
