--- a/Resources/Styles/Styles.xaml
+++ b/Resources/Styles/Styles.xaml
@@ -391,8 +391,8 @@
         <Setter Property="IsRunning" Value="{Binding IsBusy}" />
         <Setter Property="IsVisible" Value="{Binding IsBusy}" />
         <Setter Property="Color" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource White}}" />
-        <Setter Property="HeightRequest" Value="{OnPlatform Android='35', iOS='40'}" />
-        <Setter Property="WidthRequest" Value="{OnPlatform Android='35', iOS='40'}" />
+        <Setter Property="HeightRequest" Value="35" />
+        <Setter Property="WidthRequest" Value="35" />
         <Setter Property="VerticalOptions" Value="Center" />
         <Setter Property="HorizontalOptions" Value="Center"/>
     </Style>
