--- a/App.xaml
+++ b/App.xaml
@@ -2,7 +2,9 @@
 <prism:PrismApplication xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:SpaceScience"
+             xmlns:windows="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.WindowsSpecific;assembly=Microsoft.Maui.Controls"
              xmlns:prism="http://prismlibrary.com"
+             windows:Application.ImageDirectory="Assets"
              x:Class="SpaceScience.App">
     <prism:PrismApplication.Resources>
         <ResourceDictionary>
