--- a/Views/ApodPage.xaml
+++ b/Views/ApodPage.xaml
@@ -2,10 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SpaceScience.Views.ApodPage"
-             NavigationPage.HasNavigationBar="True"
+             NavigationPage.HasBackButton="False"
              Title="Apod">
 
-    <!--<NavigationPage.TitleView>
+    <NavigationPage.TitleView>
         <Grid Margin="0"
                 Grid.Row="0"  
                 Padding="0"
@@ -26,13 +26,13 @@
                         HorizontalTextAlignment="Center"
                         VerticalTextAlignment="Center"/>
         </Grid>
-    </NavigationPage.TitleView>-->
+    </NavigationPage.TitleView>
     <Grid Margin="0"
           Padding="0"
           RowDefinitions="50,*">
 
         <!--temp header-->
-        <Grid Margin="0"
+        <!--<Grid Margin="0"
                 Grid.Row="0"  
                 Padding="0"
                 ColumnSpacing="0"
@@ -51,11 +51,14 @@
                         FontAttributes="Bold"
                         HorizontalTextAlignment="Center"
                         VerticalTextAlignment="Center"/>
-        </Grid>
+        </Grid>-->
 
         <!-- APOD container-->
-        <ScrollView Grid.Row="1"
-                    Margin="15,5">
+        <ScrollView 
+            Grid.Row="1"
+            Margin="15,5"
+            VerticalOptions="FillAndExpand"
+            Orientation="Vertical">
             <StackLayout Spacing="5">
 
                 <Label 
